Final initial styles

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,23 @@
-$red: blue;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import 'header';
+@import 'toolbar';
+@import 'formula';
+@import 'table';
+@import 'dashboard';
 
+$font: 'Noto Sans';
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-  background: $red;
+  font-family: $font, sans-serif;
+
+}
+.excel{
+  position: relative;
+  height: 100%;
+  max-width: 100%;
+
 }
